# Calculator

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  main.cpp  test.txt
File/: File.h
Token/: Token.h
src/: main.cpp  variables.txt
src/Arguments/: Arguments.cpp  Arguments.h
src/Command/: Command.cpp  Command.h
src/Containers/Map/: Map.h
src/Containers/Set/: Set.h
src/Containers/Stack/: Stack.cpp  Stack.h
src/Containers/Vector/: Vector.cpp  Vector.h
src/Debug/: Debug.cpp  Debug.h
src/File/: File.cpp  File.h  variables.txt
src/History/: History.cpp  History.h
src/RPN/: RPN.cpp  RPN.h
src/Token/: Token.cpp  Token.h
src/Variables/: Variables.cpp  Variables.h
src/isDebug/: isDebug.cpp  isDebug.h
